corrected some spelling mistaces

--- a/index.html
+++ b/index.html
@@ -30,13 +30,13 @@
           <div class="skill-row">
             <img class="piano-img" src="images/grand-piano.png" alt="piano.img">
             <h3>Piano & Music</h3>
-            <p>Im really interested in playing Piano. I started learning it since I was 5 years old!
+            <p>Im really interested in playing Piano. I started learning it since I was 4 years old!
                In the meantime i can already play hard song pieces and im continuing to learn playing the piano.</p>
           </div>
           <div class="skill-row">
             <img class="code-img" src="images/code.png" alt="code.img">
             <h3>Webdesign & Development</h3>
-            <p>I started learning to develop and design a website when I was 12 because I wanted to make my own websites and videogames.
+            <p>I started learning to develop and design websites when I was 12 because I wanted to make my own websites and videogames.
             Over time, I gained alot of experience and am now able to design websites like this and many more.</p>
           </div>
         </div>
