added new style to hr over "get in touch"

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             Over time, I gained alot of experience and am now able to design websites like this and many more.</p>
           </div>
         </div>
-        <hr>
+        <hr style="clear: right">
         <div class="contact-me">
           <h2>Get In Touch</h2>
           <h3>Any questions or comments?</h3>
